--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mertcan Tombak</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,6 +20,7 @@
     <!--Montserrat fontunu kullaniyorum-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="script.js" defer></script>
   </head>
@@ -72,7 +72,7 @@
         </div>
         <!--CV indirme butonu-->
         <div class="w3-container w3-margin-top w3-padding-16">
-          <a href="./resume.pdf" class="w3-amber w3-hover-amber w3-button w3-round-small w3-hover-deep-orange w3-padding-large" target="_blank" download="resume.pdf">
+          <a id="downloadCV" class="w3-amber w3-hover-amber w3-button w3-round-small w3-hover-deep-orange w3-padding-large">
             <i data-feather="arrow-down" style="vertical-align: -0.35em;"></i>
             <span class="w3-margin-left download-text">CV Görüntüle</span>
           </a>
@@ -90,9 +90,12 @@
         </div>
         <div class="content-container w3-margin-top-2">
           <!--Giris bolumu-->
-          <div id="home" class="home w3-container w3-margin-top-4 w3-cursive">
+          <div id="enter" class="home w3-container w3-margin-top-4 w3-cursive">
             <p style="font-style: italic; font-size:x-large;">"Evren hakkındaki en dehşet verici şey onun bize düşman değil kayıtsız oluşudur."</p>
             <p style="font-style: italic; font-size:large;">- Stanley Kubrick</p>
+            <p></p>
+          </div>
+          <div id="home" class="home w3-container w3-cursive">
             <h1>Mertcan Tombak</h2>
             <h2>Bilgisayar Mühendisliği Öğrencisi</h3>
             <p></p>
